tests/error/error12.nex
class A
{
   var a;

   fun f() {}
   fun a() {}
}

new A;
